--- a/apps/demo/src/app/components/maze-selector/maze-selector.component.html
+++ b/apps/demo/src/app/components/maze-selector/maze-selector.component.html
@@ -1,8 +1,8 @@
-<div>
-  <h2>Select Maze</h2>
-  <ul>
-    <li *ngFor="let maze of mazes" (click)="onSelectMaze(maze)">
-      {{ maze }}
-    </li>
-  </ul>
+<div class="maze-selector-container">
+  <h2>Select Your Maze</h2>
+  <div class="maze-grid">
+    <div *ngFor="let maze of mazes" class="maze-item" (click)="onSelectMaze(maze)">
+      <app-maze-viewer [mazeValue]="maze"></app-maze-viewer>
+    </div>
+  </div>
 </div>
