update navigation view

--- a/apps/demo/src/app/components/maze-navigator/maze-navigator.component.html
+++ b/apps/demo/src/app/components/maze-navigator/maze-navigator.component.html
@@ -1,12 +1,6 @@
 <div class="maze-container">
   <h2>Navigate Maze</h2>
-  <div *ngFor="let row of currentMaze; let rowIndex = index" class="maze-row">
-    <span *ngFor="let cell of row; let colIndex = index" 
-          class="maze-cell"
-          [ngClass]="{'current-position': rowIndex === currentPosition.x && colIndex === currentPosition.y}">
-      {{ cell }}
-    </span>
-  </div>
+  <app-maze-viewer [maze]="currentMaze"></app-maze-viewer>
   <div class="controls">
     <button *ngFor="let option of navigationOptions" (click)="onNavigate(option)">
       Move {{ option }}
