--- a/apps/demo/src/app/components/maze-viewer/maze-viewer.component.css
+++ b/apps/demo/src/app/components/maze-viewer/maze-viewer.component.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background: #282c34;
+  background: #515355c9;
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
@@ -21,7 +21,7 @@
   transition: background-color 0.3s ease, transform 0.3s ease;
 }
 .on-navigation {
-  transform: scale(2);
+  transform: scale(2.0);
 }
 
 
